# qt-sandbox

./: .gitignore  README.md
qlist-1/: CMakeLists.txt  README.md  main.cpp
qlist-1/lib/: stack.cpp  stack.h
